Tried to implement test using service-mock but doesn't work.

--- a/app/partials/cc-loan-parameter-input.html
+++ b/app/partials/cc-loan-parameter-input.html
@@ -1,5 +1,5 @@
 <div class="loan-parameter-input">
     <label>{{labelText}}<br/>
-        <input type="text" data-ng-model="inputParameter" data-ng-model-options="{debounce: 1000}" />{{units}}
+        <input type="number" data-ng-model="inputParameter" data-ng-model-options="{debounce: 1000}" />{{units}}
     </label>
 </div>
